<?xml version="1.0" encoding="utf-8"?>

<!-- Author : Lauriane GOURAUD -->

<resources>
    <!-- Global -->
    <string name="app_name">CalandarPlus</string>

    <!--Pour le Menu -->
    <string name="menu_button">Menu bouton</string>
    <string name="Menu">Menu</string>
    <string name="agenda">Emploi du temps</string>
    <string name="todolist">To Do List</string>
    <string name="gere_agenda">Gerer agendas</string>
    <string name="sychro">Synchroniser</string>
    <string name="navigation_drawer_open">Ouvrir Navigation Drawer</string>
    <string name="navigation_drawer_close">Fermer Navigation Drawer</string>

    <!-- Création / nom pages -->
    <string name="parametres">Paramètres</string>
    <string name="jour">Jour</string>
    <string name="semaine">Semaine</string>
    <string name="add_event">Ajouter un evenement</string>
    <string name="ajouter_tache">Ajouter Tâche</string>
    <string name="add_agenda">Ajouter un agenda</string>
    <string name="add_tache">Ajouter une tâche</string>
    <string name="ag_semaine">Agenda de la semaine</string>
    <string name="ag_jour">Agenda de la journée</string>

    <!-- Pour la ToDoList -->
    <string name="categorie">Catégorie</string>
    <string name="add_categorie">Ajouter une catégorie</string>
    <string name="add_new_categorie">Ajouter nouvelle catégorie à la ToDoList</string>
    <string name="add_categorie_2lignes">Ajouter une \ncatégorie</string>
    <string name="erreur_categorie">La catégorie existe déja</string>

    <!-- pour le détail d'une tache -->
    <string name="detail">Détail</string>
    <string name="nom_tache">Nom de la tache : </string>
    <string name="nom_categorie">Nom de la catégorie : </string>
    <string name="details_tache">Détails d\'une tache</string>
    <string name="erreur_modif_tache">Erreur dans la modification de la tâche</string>
    <string name="description">Description</string>
    <string name="titre_description">Description : </string>

    <!-- Autre-->
    <string name="add">Ajouter</string>
    <string name="cancel">Annuler</string>
    <string name="delete">Supprimer</string>
    <string name="ok">Ok</string>
    <string name="valider">Valider</string>
    <string name="icon_add">Icon ajouter</string>

</resources>
